@@ -1,3 +1,11 @@
+2008-01-20  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_add_devices, foo_device_added_cb,
+		   applet_get_device_icon_for_state,
+		   applet_settings_new_secrets_requested_cb): handle unknown device
+			types
+
 2008-01-19  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-device-gsm.c
